--- a/css/use.css
+++ b/css/use.css
@@ -22,11 +22,9 @@ body{
     display:flex;
     flex-direction: column;
     background-color:cornsilk;
-  padding:20px;
-  border-radius:20px;
-
-    justify-content: spacearound;
-  
+    padding:20px;
+    border-radius:20px;
+    justify-content: space-around;
     font-size:1.2rem;
 }
 h2{
