--- a/pythonize/noter/templates/notes/notes.html
+++ b/pythonize/noter/templates/notes/notes.html
@@ -14,7 +14,8 @@
   <div id="createNoteModal" class="modal">
     <div class="modal-content">
       <h5 class="teal-text">Create a New Note</h5>
-      <form action="#" method="POST">
+      <form action="{% url 'Add_Note' %}" method="POST">
+        {% csrf_token %}
         <div class="input-field">
           <input type="text" id="note_title" name="note_title" required />
           <label for="note_title">Note Title</label>
@@ -29,6 +30,14 @@
           <label for="note_desc">Description</label>
         </div>
         <div class="modal-footer">
+          <div class="switch">
+            <label>
+              Private
+              <input type="checkbox" name="is_public" value="true" />
+              <span class="lever"></span>
+              Public
+            </label>
+          </div>
           <button type="submit" class="btn teal lighten-1">Add Note</button>
           <a href="#!" class="btn-flat modal-close">Close</a>
         </div>
@@ -39,6 +48,23 @@
   <!-- View Notes Section -->
   <div class="section">
     <h5 class="center-align teal-text">Your Notes</h5>
+
+    <div class="card">
+      {% for note in notes %}
+      <div class="card-content">
+        <span class="card-title"><b>Title:</b> {{note.title}}</span>
+        <p>{{note.Description}}</p>
+        <p><b>Date Created:</b> {{note.date_created}} </p>
+      </div>
+      <div class="card-action">
+        <a href="#" class="btn blue lighten-1">View</a>
+        <a href="#" class="btn yellow darken-2">Edit</a>
+        <a href="#" class="btn red lighten-1">Remove</a>
+        <a href="#" class="btn green lighten-1">Make Public</a>
+        <a href="#" class="btn grey darken-1">Make Private</a>
+      </div>
+      {% endfor %}
+    </div>
   </div>
 
   <!-- Example Notes -->
@@ -46,7 +72,6 @@
     <div class="card-content">
       <span class="card-title"><b>Title:</b> Sample Note</span>
       <p><b>Date Created:</b> 2025-03-18</p>
-      <p><b>Last Modified:</b> 2025-03-18</p>
     </div>
     <div class="card-action">
       <a href="#" class="btn blue lighten-1">View</a>
